kubernetes/archived/apps/database/qdrant/app/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qdrant
  namespace: database
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qdrant
  ingress:
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "6333"
              protocol: TCP
            - port: "6334"
              protocol: TCP
